Fixed issue with checkbox not working on mobile devices

--- a/src/index.css
+++ b/src/index.css
@@ -144,7 +144,7 @@ h1, h2 {
 }
 
 .form-check-input:focus {
-    display: none;
+    border: none;
 }
 
 .form-check-input:checked {
